Actions
Bug #12080
closedudapl_tavor: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../common/dapl_evd_util.c: In function 'dapls_evd_internal_create': ../common/dapl_evd_util.c:143:6: error: cast between incompatible function types from 'void (*)(struct dapls_ib_hca_handle *, struct dapls_ib_cq_handle *, void *)' to 'void (*)(void *, struct ibtl_hca_s *, ibt_async_code_t, ibt_async_event_t *)' {aka 'void (*)(void *, struct ibtl_hca_s *, enum ibt_async_code_e, struct ibt_async_event_s *)'} [-Werror=cast-function-type] (ib_async_handler_t)dapl_evd_dto_callback, ^ ../common/dapl_ia_util.c: In function 'dapls_ia_setup_callbacks': ../common/dapl_ia_util.c:1069:6: error: cast between incompatible function types from 'void (*)(struct dapls_ib_hca_handle *, ib_error_record_t *, void *)' {aka 'void (*)(struct dapls_ib_hca_handle *, struct dapl_ib_async_event_s *, void *)'} to 'void (*)(void *, struct ibtl_hca_s *, ibt_async_code_t, ibt_async_event_t *)' {aka 'void (*)(void *, struct ibtl_hca_s *, enum ibt_async_code_e, struct ibt_async_event_s *)'} [-Werror=cast-function-type] (ib_async_handler_t)dapl_evd_un_async_error_callback, ^ ../common/dapl_ia_util.c:1084:6: error: cast between incompatible function types from 'void (*)(struct dapls_ib_hca_handle *, struct dapls_ib_cq_handle *, ib_error_record_t *, void *)' {aka 'void (*)(struct dapls_ib_hca_handle *, struct dapls_ib_cq_handle *, struct dapl_ib_async_event_s *, void *)'} to 'void (*)(void *, struct ibtl_hca_s *, ibt_async_code_t, ibt_async_event_t *)' {aka 'void (*)(void *, struct ibtl_hca_s *, enum ibt_async_code_e, struct ibt_async_event_s *)'} [-Werror=cast-function-type] (ib_async_handler_t)dapl_evd_cq_async_error_callback, ^ ../common/dapl_ia_util.c:1099:6: error: cast between incompatible function types from 'void (*)(struct dapls_ib_hca_handle *, struct dapls_ib_qp_handle *, ib_error_record_t *, void *)' {aka 'void (*)(struct dapls_ib_hca_handle *, struct dapls_ib_qp_handle *, struct dapl_ib_async_event_s *, void *)'} to 'void (*)(void *, struct ibtl_hca_s *, ibt_async_code_t, ibt_async_event_t *)' {aka 'void (*)(void *, struct ibtl_hca_s *, enum ibt_async_code_e, struct ibt_async_event_s *)'} [-Werror=cast-function-type] (ib_async_handler_t)dapl_evd_qp_async_error_callback, ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 93fec3dabf64a3a6299b6973ba1d0260c667e1c0
commit 93fec3dabf64a3a6299b6973ba1d0260c667e1c0 Author: Toomas Soome <tsoome@me.com> Date: 2020-02-24T18:49:09.000Z 12080 udapl_tavor: cast between incompatible function types Reviewed by: John Levon <john.levon@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions